output/production/mystack/mystack-prd/service-myapp.yaml
---
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: prd
  type: ClusterIP
metadata:
  name: myapp
  namespace: mystack-prd
kind: Service
apiVersion: v1
